--- a/source/css/_base.scss
+++ b/source/css/_base.scss
@@ -12,10 +12,15 @@ body {
 }
 
 .container {
-    max-width: 1440px; //1364
+    max-width: 1440px;
     box-sizing: border-box;
     margin: 0 auto;
-    padding: 0 70px;  //0 32px
+    padding: 0 70px;
+
+    @media (max-width: 1023px) {
+        max-width: 100%;
+        padding: 0 32px;
+    }
 }
 
 .btn {
@@ -70,6 +75,7 @@ h4 {
 .section-sign {
     display: flex;
     align-items: center;
+    white-space: nowrap;
 
     &-bull {
         width: 6px;
@@ -91,6 +97,7 @@ h4 {
         align-items: center;
         justify-content: space-between;
         width: 140px;
+        flex-shrink: 0;
     }
 
     &__controls-left,
