--- a/source/css/_real-estate.scss
+++ b/source/css/_real-estate.scss
@@ -8,12 +8,22 @@
         line-height: 40px;
         text-transform: uppercase;
         color: $dark;
-        margin-left: 263px;
+        margin-left: 20.230%;
+
+        @media (max-width: 1023px) {
+            margin-left: 0;
+            font-size: 16px;
+            line-height: 24px; 
+        }
     }
 
     &__lines {
         margin-top: 65px;
         overflow: hidden;
+
+        @media (max-width: 1023px) {
+            margin-top: 24px;
+        }
     }
 
     &__line {
@@ -31,6 +41,12 @@
             text-transform: uppercase;
             color: #B6B6B6;
             transition: color .3s ease-out;
+
+            @media (max-width: 1023px) {
+                font-size: 36px;
+                line-height: 40px;
+                letter-spacing: -1.08px;
+            }
         }
 
         &-item:hover {
@@ -55,6 +71,10 @@
         &.second:hover &-two {
             animation-play-state: paused;
         }
+    }
+
+    @media (max-width: 1023px) {
+        margin-top: 90px;
     }
 
 }
