--- a/source/css/_reviews.scss
+++ b/source/css/_reviews.scss
@@ -11,30 +11,63 @@
         max-width: 378px;
         text-transform: uppercase;
         margin-top: 28px;
+
+        @media (max-width: 1023px) {
+            font-size: 24px;
+            line-height: 24px;
+            max-width: 358px;
+            margin-top: 24px;
+        }
     }
 
     &__right {
         display: flex;
         align-items: flex-end;
         justify-content: space-between;
+        min-width: 0;
         width: 100%;
         margin-top: -205px;
+
+        @media (max-width: 1300px) {
+            margin-top: 42px;
+            flex-direction: column;
+        }
+
+        @media (max-width: 1023px) {
+            margin-top: 24px;
+        }
+
+        .slider__controls {
+            @media (max-width: 1300px) {
+                margin-top: 16px;
+                order: 2;
+            }
+        }
     }
 
     &__slider {
+        min-width: 0;
         width: 100%;
         max-width: 766px;
         background-color: $red;
         border-radius: 24px;
         color: white;
+        min-height: 360px;
+        box-sizing: border-box;
 
         .slick-list {
             overflow: hidden;
+            min-height: 360px;
         }
 
         .slick-track{
             display: flex;
             overflow: hidden;
+            min-height: 360px;
+        }
+
+        .slick-slide {
+            min-height: 360px;
         }
     }
 
@@ -44,6 +77,9 @@
         padding: 51px 48px 47px;
         user-select: none;
         pointer-events: none;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
 
         &-quote {
             font-family: "Caveat", Arial, Helvetica, sans-serif;
@@ -51,6 +87,11 @@
             line-height: 30px;
             font-weight: 400;
             max-width: 268px;
+
+            @media (max-width: 1023px) {
+                font-size: 32px;
+                line-height: 22px; 
+            }
         }
 
         &-author {
@@ -58,7 +99,6 @@
             font-weight: 500;
             font-size: 14px;
             line-height: 16px;
-            margin-top: 156px;
         }
 
         &-photo {
@@ -73,10 +113,16 @@
                 height: auto;
             }
         }
+
+        @media (max-width: 1023px) {
+            padding: 28px 28px 33px;
+        }
+    }
+
+    @media (max-width: 1023px) {
+        padding-top: 90px;
     }
 
 }
 
-.section-sign {
-}
 
