--- a/source/css/_achievements.scss
+++ b/source/css/_achievements.scss
@@ -5,13 +5,21 @@
     &__wrapper {
         display: flex;
         align-items: flex-start;
+
+        @media (max-width: 1023px) {
+            flex-direction: column;
+        }
     }
 
     &__items {
         position: relative;
-        margin-left: 187px;
+        margin-left: 15.153%;
         width: 100%;
         max-width: 820px;
+
+        @media (max-width: 1023px) {
+            margin-left: 0;
+        }
     }
 
     &__sticky-text {
@@ -25,10 +33,23 @@
         color: $dark;
         text-align: center;
         padding-bottom: 84px;
+
+        @media (max-width: 1023px) {
+            position: static;
+            margin-top: 24px;
+            text-align: left;
+            font-size: 32px;
+            line-height: 32px;
+            padding-bottom: 0; 
+        }
     }
 
     &__rows {
         margin-top: -74px;
+
+        @media (max-width: 1023px) {
+            margin-top: 36px;
+        }
     }
 
     &__row {
@@ -36,6 +57,17 @@
         justify-content: space-between;
         width: 100%;
         margin-bottom: 190px;
+
+        @media (max-width: 1023px) {
+            flex-direction: column;
+            margin-bottom: 16px;
+        }
+
+        &:last-child {
+            @media (max-width: 1023px) {
+                margin-bottom: 0;
+            } 
+        }
     }
 
     &__item {
@@ -53,6 +85,17 @@
 
         &:last-child {
             transform: translateY(100%);
+
+            @media (max-width: 1023px) {
+                transform: translateY(0);
+                align-self: flex-end;
+                margin-bottom: 0; 
+            }
+        }
+
+        @media (max-width: 1023px) {
+            margin-bottom: 16px;
+            max-width: 358px;
         }
     }
 
@@ -74,5 +117,10 @@
         letter-spacing: 0.96px;
         text-transform: uppercase;
         color: $dark;
+    }
+
+
+    @media (max-width: 1023px) {
+        padding-top: 90px;
     }
 }
