--- a/source/css/_header.scss
+++ b/source/css/_header.scss
@@ -42,7 +42,17 @@
                 background-color: $light-gray;
                 color: $dark;
             }
+
+            @media (max-width: 1140px) {
+                padding: 12px;
+            }
+
         }
+
+        @media (max-width: 1023px) {
+            display: none;
+        }
+
     }
 
     &__btn {
@@ -72,5 +82,11 @@
 
     &.fix &__logo-red {
         display: block;
+    }
+
+
+    @media (max-width: 1023px) {
+       top: 0;
+       padding: 22px 0;
     }
 }
