--- a/source/css/_hero.scss
+++ b/source/css/_hero.scss
@@ -4,17 +4,36 @@
     height: 100vh;
     overflow: hidden;
 
+    .container {
+        @media (max-width: 1023px) {
+            height: 100%;
+        }
+    }
+
     &__wrapper {
         position: relative;
         height: 100vh;
         display: flex;
         flex-direction: column;
         justify-content: center;
+
+        @media (max-width: 1023px) {
+            height: 100%;
+        }
     }
 
     &__info {
         position: relative;
         z-index: 20;
+
+        @media (max-width: 1023px) {
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            padding-top: 112px;
+            padding-bottom: 29px;
+        }
     }
 
     &__title {
@@ -24,6 +43,11 @@
         font-weight: 900;
         color: white;
         text-transform: uppercase;
+
+        @media (max-width: 1023px) {
+            font-size: 32px;
+            line-height: 32px;
+        }
     }
 
     &__title-btn {
@@ -38,6 +62,12 @@
         background-size: 15px 13px;
         background-position: center;
         animation: slideY .8s linear infinite;
+
+        @media (max-width: 1023px) {
+            width: 27px;
+            height: 27px;
+            background-size: 7px 6px; 
+        }
     }
 
     &__subtitle {
@@ -47,10 +77,21 @@
         font-weight: 400;
         color: white;
         margin-top: 27px;
+
+        @media (max-width: 1023px) {
+            font-size: 14px;
+            line-height: 18px;
+            margin-top: 24px;
+            max-width: 200px;
+        }
     }
 
     &__btn {
         margin-top: 68px;
+
+        @media (max-width: 1023px) {
+            margin-top: auto;
+        }
     }
 
     &__note {
@@ -68,6 +109,10 @@
         padding: 25px 34px 26px 24px;
         max-width: 265px;
         z-index: 20;
+
+        @media (max-width: 1023px) {
+            display: none;
+        }
     }
 
     &__girl {
@@ -89,6 +134,11 @@
                 height: auto;
                 margin-top: auto;
             }
+
+            @media (max-width: 1023px) {
+                margin-top: 0;
+                height: 100%;
+            }
         }
 
         @media (max-width: 1363px) {
@@ -99,6 +149,20 @@
             flex-direction: column;
             right: 4px;
         }
+
+        @media (max-width: 1023px) {
+            width: 427px; //286
+            height: 597px; //400
+            display: block;
+            top: auto;
+            bottom: -40px;
+            right: auto; //-120
+            left: 40%;
+        }
+    }
+
+    @media (max-width: 1023px) {
+        height: 626px;
     }
 }
 
