--- a/source/css/_request.scss
+++ b/source/css/_request.scss
@@ -11,15 +11,19 @@
         padding: 56px;
 
         &-title {
+            position: relative;
             font-family: "Roboto Condensed", Arial, Helvetica, sans-serif;
             font-size: 24px;
             line-height: 28px;
             font-weight: 900;
             max-width: 481px;
             text-transform: uppercase;
+            z-index: 20;
         }
 
         &-info {
+            position: relative;
+            z-index: 20;
             margin-top: 110px;
         }
 
@@ -63,6 +67,10 @@
             img {
                 width: 100%;
                 height: 100%;
+            }
+
+            @media (max-width: 1140px) {
+                right: -15%;  
             }
         }
     }
@@ -324,6 +332,11 @@
             text-decoration: none;
             appearance: none;
         }
+    }
+
+    @media (max-width: 1023px) {
+        margin-top: 90px;
+        margin-bottom: 45px;
     }
 
 }
