--- a/source/css/_why.scss
+++ b/source/css/_why.scss
@@ -3,15 +3,30 @@
 
     &__wrapper {
         display: flex;
+        justify-content: space-between;
+
+        @media (max-width: 1023px) {
+            flex-direction: column;
+        }
     }
 
     &__left {
+        margin-right: 15.153%;
+
+        @media (max-width: 1023px) {
+            margin-right: 0;
+        }
     }
 
     &__right {
+        min-width: 0;
         width: 100%;
-        max-width: 766px;
-        margin-left: 197px;
+        flex-shrink: 1;
+
+        &-wrap {
+            width: 100%;
+            max-width: 766px; 
+        }
     }
 
     &__text {
@@ -21,11 +36,19 @@
         font-weight: 900;
         color: $dark;
         text-transform: uppercase;
+
+        @media (max-width: 1023px) {
+            font-size: 24px;
+            line-height: 24px;
+            max-width: 358px;
+            margin-top: 24px;
+        }
     }
 
     &__gallery {
         position: relative;
         margin-top: 42px;
+        max-width: 100%;
 
         .slider__controls {
             position: absolute;
@@ -33,24 +56,39 @@
             bottom: -10px;
             z-index: 30;
         }
+
+        @media (max-width: 1023px) {
+            margin-top: 24px;
+        }
     }
 
     &__slider {
+        min-width: 0;
         width: 100%;
+        max-width: 766px;
         position: relative;
         z-index: 20;
 
         .slick-list {
             overflow: hidden;
+            max-width: 100%;
         }
 
         .slick-track{
             display: flex;
             overflow: hidden;
         }
+
+        .slick-slide {
+            max-width: 100%;
+            flex-shrink: 1;
+        }
+
     }
 
     &__slider-item {
+        max-width: 100%;
+        flex-shrink: 1;
 
         &-image {
             width: 100%;
@@ -74,6 +112,10 @@
             max-width: 571px;
             margin-top: 27px;
         }
+    }
+
+    @media (max-width: 1023px) {
+        padding-top: 90px;
     }
 
 }
