--- a/source/css/_request.scss
+++ b/source/css/_request.scss
@@ -19,12 +19,21 @@
             max-width: 481px;
             text-transform: uppercase;
             z-index: 20;
+
+            @media (max-width: 699px) {
+                font-size: 16px;
+                line-height: 20px;
+            }
         }
 
         &-info {
             position: relative;
             z-index: 20;
             margin-top: 110px;
+
+            @media (max-width: 1023px) {
+                margin-top: 36px; 
+            }
         }
 
         &-block {
@@ -41,6 +50,11 @@
                 font-size: 10px;
                 line-height: 14px;
                 letter-spacing: 0.06em;
+
+                @media (max-width: 1023px) {
+                    font-size: 8px;
+                    letter-spacing: 0.48px;
+                }
             }
 
             &-value {
@@ -50,6 +64,19 @@
                 line-height: 24px;
                 letter-spacing: -0.02em;
                 margin-top: 8px;
+                max-width: 520px;
+
+                @media (max-width: 1023px) {
+                    font-size: 16px;
+                    line-height: 20px; 
+                    letter-spacing: -0.32px;
+                    margin-top: 4px;
+                    max-width: 340px;
+                }
+            }
+
+            @media (max-width: 1023px) {
+                margin-bottom: 24px;
             }
 
         }
@@ -72,6 +99,14 @@
             @media (max-width: 1140px) {
                 right: -15%;  
             }
+
+            @media (max-width: 1023px) {
+                display: none;
+            }
+        }
+
+        @media (max-width: 699px) {
+            padding: 28px;
         }
     }
 
@@ -122,6 +157,10 @@
         &.hidden+.request__success {
             display: flex;
         }
+
+        @media (max-width: 699px) {
+            padding: 0;
+        }
     }
 
     &__form {
@@ -137,6 +176,17 @@
             text-align: center;
             max-width: 500px;
             margin: 0 auto;
+
+            @media (max-width: 1023px) {
+                font-size: 24px;
+                line-height: 24px; 
+            }
+
+            @media (max-width: 699px) {
+                text-align: left;
+                max-width: 262px;
+                margin: 0;
+            }
         }
 
         &-fields {
@@ -147,11 +197,25 @@
             &-left {
                 width: 100%;
                 max-width: 343px;
+
+                @media (max-width: 1023px) {
+                    margin-right: 32px;
+                }
+
+                @media (max-width: 699px) {
+                    margin-right: 0;
+                    max-width: 100%;
+                }
             }
 
             &-right {
                 width: 100%;
                 max-width: 343px;
+
+                @media (max-width: 699px) {
+                    margin-top: 32px;
+                    max-width: 100%;
+                }
             }
 
             &-field {
@@ -164,6 +228,12 @@
                     margin-bottom: 0;
                 }
             }
+
+            @media (max-width: 699px) {
+                margin-top: 42px;
+                flex-direction: column;
+            }
+
         }
         
         &-label {
@@ -211,6 +281,12 @@
             align-items: center;
             justify-content: space-between;
             margin-top: 64px;
+
+            @media (max-width: 699px) {
+                margin-top: 32px;
+                flex-direction: column;
+                align-items: flex-start;
+            }
         }
 
         &-agreement {
@@ -245,6 +321,7 @@
                     background-repeat: no-repeat;
                     background-position: center;
                     background-size: 10px 8px;
+                    flex-shrink: 0;
                 }
             }
 
@@ -276,6 +353,10 @@
             background-color: $red;
             color: white;
             border-radius: 8px;
+
+            @media (max-width: 699px) {
+                margin-top: 44px;
+            }
         }
 
         &-error-text {
@@ -288,6 +369,14 @@
             line-height: 16px;
             color: $red;
             visibility: hidden;
+        }
+
+        @media (max-width: 1023px) {
+            padding: 0 32px;
+        }
+
+        @media (max-width: 699px) {
+            padding: 36px 28px 60px;
         }
     }
 
@@ -325,12 +414,23 @@
             text-align: center;
             max-width: 500px;
             margin: 0 auto;
+
+            @media (max-width: 1023px) {
+                font-size: 24px;
+                line-height: 24px;
+                max-width: 260px; 
+            }
         }
 
         &-link {
             color: white;
             text-decoration: none;
             appearance: none;
+        }
+
+        @media (max-width: 1023px) {
+            padding-top: 44px;
+            padding-bottom: 44px;
         }
     }
 
