--- a/source/css/_reviews.scss
+++ b/source/css/_reviews.scss
@@ -58,16 +58,32 @@
         .slick-list {
             overflow: hidden;
             min-height: 360px;
+
+            @media (max-width: 699px) {
+                min-height: 444px; 
+            }
         }
 
         .slick-track{
             display: flex;
             overflow: hidden;
             min-height: 360px;
+
+            @media (max-width: 699px) {
+                min-height: 444px; 
+            }
         }
 
         .slick-slide {
             min-height: 360px;
+
+            @media (max-width: 699px) {
+                min-height: 444px; 
+            }
+        }
+
+        @media (max-width: 699px) {
+            min-height: 444px; 
         }
     }
 
@@ -82,6 +98,8 @@
         justify-content: space-between;
 
         &-quote {
+            position: relative;
+            z-index: 20;
             font-family: "Caveat", Arial, Helvetica, sans-serif;
             font-size: 40px;
             line-height: 30px;
@@ -95,10 +113,16 @@
         }
 
         &-author {
+            position: relative;
+            z-index: 20;
             font-family: "Roboto", Arial, Helvetica, sans-serif;
             font-weight: 500;
             font-size: 14px;
             line-height: 16px;
+
+            @media (max-width: 699px) {
+                max-width: 204px;
+            }
         }
 
         &-photo {
@@ -111,6 +135,10 @@
             img {
                 width: 100%;
                 height: auto;
+            }
+
+            @media (max-width: 699px) {
+                right: 6px;
             }
         }
 
