--- a/source/css/_about.scss
+++ b/source/css/_about.scss
@@ -27,6 +27,10 @@
             line-height: 24px;
             max-width: 500px;
         }
+
+        @media (max-width: 699px) {
+            max-width: 358px; 
+        }
     }
 
     @media (max-width: 1023px) {
