--- a/source/css/_base.scss
+++ b/source/css/_base.scss
@@ -21,6 +21,10 @@ body {
         max-width: 100%;
         padding: 0 32px;
     }
+
+    @media (max-width: 699px) {
+        padding: 0 16px;
+    }
 }
 
 .btn {
