--- a/source/css/_request.scss
+++ b/source/css/_request.scss
@@ -148,6 +148,11 @@
             &.visible {
                 visibility: visible;
             }
+
+            @media (max-width: 699px) {
+                align-items: flex-end;
+                padding-bottom: 240px;
+            }
         }
 
         &.hidden {
@@ -395,6 +400,10 @@
             text-transform: uppercase;
             text-align: center;
             max-width: 500px;
+        }
+
+        @media (max-width: 699px) {
+            min-height: 375px;
         }
     }
 
