--- a/source/css/_hero.scss
+++ b/source/css/_hero.scss
@@ -1,10 +1,11 @@
 .hero {
     position: relative;
     background-color: $red;
-    height: 100vh;
+    height: 875px;
     overflow: hidden;
 
     .container {
+        height: 100%;
         @media (max-width: 1023px) {
             height: 100%;
         }
@@ -12,27 +13,17 @@
 
     &__wrapper {
         position: relative;
-        height: 100vh;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-
-        @media (max-width: 1023px) {
-            height: 100%;
-        }
+        min-height: 100%;
     }
 
     &__info {
         position: relative;
         z-index: 20;
+        padding-top: 234px;
 
         @media (max-width: 1023px) {
             height: 100%;
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
             padding-top: 112px;
-            padding-bottom: 29px;
         }
     }
 
@@ -90,7 +81,7 @@
         margin-top: 68px;
 
         @media (max-width: 1023px) {
-            margin-top: auto;
+            margin-top: 212px;
         }
     }
 
@@ -98,6 +89,7 @@
         position: absolute;
         bottom: 80px;
         right: 0;
+        box-sizing: border-box;
         background: rgba(255, 255, 255, 0.2);
         backdrop-filter: blur(30px);
         border-radius: 16px;
