--- a/source/css/_reviews.scss
+++ b/source/css/_reviews.scss
@@ -28,7 +28,7 @@
         width: 100%;
         margin-top: -205px;
 
-        @media (max-width: 1300px) {
+        @media (max-width: 1170px) {
             margin-top: 42px;
             flex-direction: column;
         }
@@ -38,7 +38,7 @@
         }
 
         .slider__controls {
-            @media (max-width: 1300px) {
+            @media (max-width: 1170px) {
                 margin-top: 16px;
                 order: 2;
             }
@@ -80,6 +80,18 @@
             @media (max-width: 699px) {
                 min-height: 444px; 
             }
+        }
+
+        @media (max-width: 1280px) {
+            max-width: 670px
+        }
+
+        @media (max-width: 1170px) {
+            max-width: 766px;
+        }
+
+        @media (max-width: 1023px) {
+            max-width: 100%;
         }
 
         @media (max-width: 699px) {
