--- a/source/css/_internship.scss
+++ b/source/css/_internship.scss
@@ -20,13 +20,15 @@
 
     &__item {
         height: 233px;
+        transition: all .3s ease-out;
 
-        &.red {
+        &:hover {
             background: rgba(214, 19, 54, 0.8);
+        }
 
-            @media (max-width: 699px) {
-                background: rgba(243, 243, 243, 0.80);
-            }
+        &:hover .internship__item-value,
+        &:hover .internship__item-text {
+            color: white;
         }
     }
 
@@ -38,6 +40,8 @@
         text-transform: uppercase;
         color: $dark;
         letter-spacing: normal;
+        user-select: none;
+        transition: all .3s ease-out;
 
         @media (max-width: 699px) {
             max-width: 263px;
@@ -53,18 +57,11 @@
         text-transform: none;
         letter-spacing: normal;
         max-width: 262px;
+        user-select: none;
+        transition: all .3s ease-out;
 
         @media (max-width: 699px) {
             max-width: 303px;
-        }
-    }
-
-    &__item.red &__item-value,
-    &__item.red &__item-text {
-        color: white;
-
-        @media (max-width: 699px) {
-            color: $dark;
         }
     }
 }
