--- a/source/css/_hero.scss
+++ b/source/css/_hero.scss
@@ -79,9 +79,15 @@
 
     &__btn {
         margin-top: 68px;
+        transition: all .3s ease-out;
 
         @media (max-width: 1023px) {
             margin-top: 212px;
+        }
+
+        &:hover {
+            background-color: $red-dark;
+            color: white;
         }
     }
 
