--- a/source/css/_reviews.scss
+++ b/source/css/_reviews.scss
@@ -131,6 +131,7 @@
             font-weight: 500;
             font-size: 14px;
             line-height: 16px;
+            max-width: 270px;
 
             @media (max-width: 699px) {
                 max-width: 204px;
