--- a/source/css/_vectors.scss
+++ b/source/css/_vectors.scss
@@ -232,7 +232,7 @@
             text-transform: uppercase;
             font-weight: 900;
             display: flex;
-            align-items: center;
+            align-items: flex-start;
 
             @media (max-width: 1023px) {
                 font-size: 14px;
@@ -243,6 +243,7 @@
 
         &-area {
             margin-left: 20px;
+            white-space: nowrap;
 
             @media (max-width: 1023px) {
                 margin-left: 16px;
@@ -270,7 +271,7 @@
             font-weight: 400;
             font-size: 14px;
             line-height: 18px;
-            max-width: 496px;
+            max-width: 460px;
             margin-top: 59px;
 
             @media (max-width: 1023px) {
