--- a/source/css/_request.scss
+++ b/source/css/_request.scss
@@ -26,10 +26,19 @@
             }
         }
 
+        &-subtitle {
+            font-family: "Roboto Condensed", Arial, Helvetica, sans-serif;
+            font-size: 20px;
+            line-height: 24px;
+            font-weight: 800;
+            text-transform: uppercase;
+            margin-top: 40px; 
+        }
+
         &-info {
             position: relative;
             z-index: 20;
-            margin-top: 110px;
+            margin-top: 60px;
 
             @media (max-width: 1023px) {
                 margin-top: 36px; 
@@ -66,6 +75,14 @@
                 margin-top: 8px;
                 max-width: 520px;
 
+                & ul {
+                    list-style-type: disc;
+                }
+
+                & ul li {
+                    margin-bottom: 12px;
+                }
+
                 @media (max-width: 1023px) {
                     font-size: 16px;
                     line-height: 20px; 
@@ -83,17 +100,17 @@
 
         &-image {
             position: absolute;
-            top: 0;
             bottom: 0;
-            right: -10px;
-            width: 615px;
-            height: 540px;
+            right: -20px;
+            width: 630px;
+            height: 670px;
             pointer-events: none;
             user-select: none;
 
             img {
                 width: 100%;
                 height: 100%;
+                object-fit: cover;
             }
 
             @media (max-width: 1140px) {
