--- a/source/css/_request.scss
+++ b/source/css/_request.scss
@@ -32,7 +32,12 @@
             line-height: 24px;
             font-weight: 800;
             text-transform: uppercase;
-            margin-top: 40px; 
+            margin-top: 40px;
+            
+            @media (max-width: 699px) {
+                font-size: 16px;
+                line-height: 20px;
+            }
         }
 
         &-info {
@@ -443,7 +448,7 @@
             font-weight: 900;
             text-transform: uppercase;
             text-align: center;
-            max-width: 500px;
+            max-width: 440px;
             margin: 0 auto;
 
             @media (max-width: 1023px) {
