--- a/source/css/_request.scss
+++ b/source/css/_request.scss
@@ -43,7 +43,7 @@
         &-info {
             position: relative;
             z-index: 20;
-            margin-top: 60px;
+            margin-top: 40px;
 
             @media (max-width: 1023px) {
                 margin-top: 36px; 
@@ -73,9 +73,9 @@
 
             &-value {
                 font-family: "Roboto Condensed", Arial, Helvetica, sans-serif;
-                font-weight: 700;
-                font-size: 24px;
-                line-height: 24px;
+                font-weight: 400;
+                font-size: 20px;
+                line-height: 22px;
                 letter-spacing: -0.02em;
                 margin-top: 8px;
                 max-width: 520px;
@@ -106,7 +106,7 @@
         &-image {
             position: absolute;
             bottom: 0;
-            right: -20px;
+            right: 0;
             width: 630px;
             height: 670px;
             pointer-events: none;
