правка размера фото студентов в слайдере на моб

--- a/source/css/_reviews.scss
+++ b/source/css/_reviews.scss
@@ -152,6 +152,8 @@
 
             @media (max-width: 699px) {
                 right: 6px;
+                width: 183px;
+                height: 255px;
             }
         }
 
